Prettied up the Constant Enemy and projectile stats
Also Gathered many sprites in the same place

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "raylib.h": "c",
         "algorithm": "c",
         "format": "c",
-        "movement.h": "c"
+        "movement.h": "c",
+        "stdio.h": "c"
     }
 }
