Moved most sprites into sprites.c

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,7 @@
                 "src/enemy.c",
                 "src/movement.c",
                 "src/raycast.c",
+                "src/sprites.c",
                 "-Iinclude",
                 "-Llib",
                 "-lraylib",
