projectiles now respect walls

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "algorithm": "c",
         "format": "c",
         "movement.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "enemy.h": "c"
     }
 }
